php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37060 Type of retval of Countable::count() is not checked
Submitted: 2006-04-12 17:05 UTC Modified: 2006-04-12 19:33 UTC
From: alpha at rrs dot at Assigned: johannes (profile)
Status: Closed Package: SPL related
PHP Version: 5.1.2 OS:
Private report: No CVE-ID: None
 [2006-04-12 17:05 UTC] alpha at rrs dot at
Description:
------------
If an implementation of Countable::count() does not return an 
int the result is a big, "random" number. It seems like the 
result is always taken as int even if it's a string or float.

IMHO the result should get typecasted to an int or at least a 
warning. If I typecast the result to an int in the return 
statement it works as expected. 

Reproduce code:
---------------
<?php

error_reporting(E_ALL | E_STRICT);

class Test implements Countable {
	function count() {
		return '1';
	}
}

$test = new Test();
var_dump(count($test));

?>

Expected result:
----------------
int(1)


Actual result:
--------------
int(148313044)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-04-12 19:33 UTC] johannes@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 06:00:02 2026 UTC