- Fix bug #37060 (Type of retval of Countable::count() is not checked)